mobile overflow fix test 2

--- a/styles.css
+++ b/styles.css
@@ -567,7 +567,7 @@ a {
   }
   
 .section-main {
-  width: 100vw;
+  width: 100%;
   height: 85vh;
   display: flex;
   flex-direction: column;
@@ -913,8 +913,10 @@ a {
   
   /* Mobile Responsive */
   @media screen and (max-width: 768px) {
+    html, body { overflow-x: hidden; }
     .main {
       height: 120vh;
+      overflow-x: clip;
     }
     .main__container {
       display: grid;
